# sparse_causal_jepa

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: goal-adjustments.md  research-roadmap.md
.claude/agents/: README.md  data-pipeline-engineer.md  experiment-infra-engineer.md  model-architecture-engineer.md  paper-to-code-translator.md  research-repo-architect.md  run-forensics.md  test-and-ci-engineer.md
configs/: README.md  config.yaml
configs/experiment/: bounce_baumgartner.yaml  bounce_states.yaml  smoke.yaml
docs/: decisions.md  experiments.tex  implementation_audit.tex
docs/audits/: 2026-07-12-eval-data.md  2026-07-12-model-losses.md
scripts/: README.md  aggregate_runs.py  eval_identifiability.py  isambard_logit_sweep.sbatch  isambard_main_only.sbatch  isambard_pipeline.sbatch  launch_bounce_server.sh  pregenerate_bounce.py  run_bounce_example.sh  run_dense_logit_value.sh  slurm_rung1.sbatch  summarize_logit_sweep.py  train.py
src/scjepa/: __init__.py
src/scjepa/data/: __init__.py  bounce.py  synthetic_smoke.py
src/scjepa/eval/: __init__.py  graph.py  harness.py  parameters.py
src/scjepa/losses/: __init__.py  predictive.py  regularizer.py
src/scjepa/models/: __init__.py  channel_split.py  jepa.py  savi.py  spartan.py  state_jepa.py
src/scjepa/training/: __init__.py  factory.py  lagrangian.py  loop.py
tests/: README.md  test_bounce.py  test_channel_split.py  test_eval.py  test_losses.py  test_savi_encoder.py  test_spartan.py  test_state_jepa.py  test_training.py
